final commit on ML code

--- a/src/ML-try-004.ipynb
+++ b/src/ML-try-004.ipynb
@@ -6,34 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the TensorBoard notebook extension\n",
-    "# In colab this can be done prior to the pip install above.\n",
-    "# I added the pip install since it was done in the dev summit 2019 video\n",
     "%load_ext tensorboard.notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# google collab \n",
-    "\n",
-    "#from google.colab import drive\n",
-    "#drive.mount('/content/gdrive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,17 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from google.colab import files\n",
-    "#uploaded = files.upload()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1073,7 @@
        "[3903 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,6 +1081,98 @@
    "source": [
     "# This should show an empty set\n",
     "nans(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>usgs</th>\n",
+       "      <th>site_no</th>\n",
+       "      <th>date</th>\n",
+       "      <th>tidal_high</th>\n",
+       "      <th>tidal_low</th>\n",
+       "      <th>precipitation_inches</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [usgs, site_no, date, tidal_high, tidal_low, precipitation_inches, lat, long]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.dropna(inplace=True)\n",
+    "nans(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5972, 8)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.shape\n",
+    "#dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing the NA's, removes all of the gsvb sensor readings"
    ]
   },
   {
@@ -1168,98 +1228,6 @@
     }
    ],
    "source": [
-    "dataset.dropna(inplace=True)\n",
-    "nans(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5972, 8)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.shape\n",
-    "#dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Removing the NA's, removes all of the gsvb sensor readings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>usgs</th>\n",
-       "      <th>site_no</th>\n",
-       "      <th>date</th>\n",
-       "      <th>tidal_high</th>\n",
-       "      <th>tidal_low</th>\n",
-       "      <th>precipitation_inches</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [usgs, site_no, date, tidal_high, tidal_low, precipitation_inches, lat, long]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "dataset[dataset.usgs == 'GSVB']"
    ]
   },
@@ -1272,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1325,7 @@
        "855 2018-04-24        1.28                  0.48  36.841139 -76.057139"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1476,7 @@
        "855       2018           4        24  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1591,7 @@
        "855           4        24  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,40 +1657,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stats_df = train_ds.copy()\n",
-    "# remove the lat, long and date columns\n",
-    "train_stats_df.pop('lat')\n",
-    "train_stats_df.pop('long')\n",
     "train_stats = train_stats_df.describe().transpose()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def norm(a_df):\n",
-    "    # Since data used to normalize data is only for numeric columns,\n",
-    "    # the data column is not present.  Remove this column, do the normalize\n",
-    "    # operation and then join back the date column\n",
-    "    \n",
-    "    # create a date dataframe from one column. \n",
-    "    # Use the list selector for a single column to make it a df instead of a series\n",
-    "    #\n",
-    "    # Also don't normalize lat and longs\n",
-    "    the_dates_df = a_df[['lat','long']]\n",
-    "    # remove the date column since its saved now.\n",
-    "    a_df.pop('lat')\n",
-    "    a_df.pop('long')\n",
     "    # Do the norm operation\n",
     "    normed_df = (a_df - train_stats['mean']) / train_stats['std']\n",
-    "    # add back the date column to normalized dataframe\n",
-    "    normed_df = the_dates_df.join(normed_df)\n",
     "    return normed_df\n",
     "\n",
     "normed_train_ds = norm(train_ds)\n",
@@ -1746,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,14 +1744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/davis/progs/tf-hackathon/logs/20190506-120614\n"
+      "/home/davis/progs/tf-hackathon/logs/20190506-162408\n"
      ]
     }
    ],
@@ -1812,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,13 +1772,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6012 (pid 21591), started 3:14:00 ago. (Use '!kill 21591' to kill it.)"
+       "Reusing TensorBoard on port 6013 (pid 28713), started -1 day, 23:06:59 ago. (Use '!kill 28713' to kill it.)"
       ]
      },
      "metadata": {},
@@ -1840,14 +1791,14 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"800\"\n",
-       "            src=\"http://localhost:6012\"\n",
+       "            src=\"http://localhost:6013\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa63c07f470>"
+       "<IPython.lib.display.IFrame at 0x7f30b859be80>"
       ]
      },
      "metadata": {},
@@ -1873,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,11 +1964,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After the lat,long are normalized it still does not show improvement on the validation set.  Instead of using the training data for training and a hold out amount on the validation, lets use the original splits which are shuffled."
+   ]
   },
   {
    "cell_type": "code",
